accordion title edit issue on safari

--- a/assets/reactjs/src/blocks/accordion/style.scss
+++ b/assets/reactjs/src/blocks/accordion/style.scss
@@ -23,11 +23,6 @@
             box-shadow: none;
             font-size: inherit;
             line-height: 1.6;
-            color: inherit;
-            text-decoration: none;
-            text-transform: none;
-            font-style: normal;
-            user-select: none;
             cursor: pointer;
             &:focus,
             &:active,
